quick fix compile error on robot

--- a/code/teleop_ws/src/tbot_control_joy/CMakeLists.txt
+++ b/code/teleop_ws/src/tbot_control_joy/CMakeLists.txt
@@ -8,7 +8,7 @@ project(tbot_control_joy)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  joy
+#  joy
 )
 
 ## System dependencies are found with CMake's conventions
