--- a/code/catkin_ws/src/video_reprojection/CMakeLists.txt
+++ b/code/catkin_ws/src/video_reprojection/CMakeLists.txt
@@ -2,14 +2,18 @@ cmake_minimum_required(VERSION 2.8.3)
 project(video_reprojection)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
+set(OpenCV_DIR /usr/share/OpenCV/)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   image_transport
-#  roscpp
+  roscpp
+  cv_bridge
+  OpenCV
+  #vision_opencv
   sensor_msgs
   std_msgs
 )
@@ -104,10 +108,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES video_reprojection
-#  CATKIN_DEPENDS cv_bridge rospy sensor_msgs std_msgs
-#  DEPENDS system_lib
+# INCLUDE_DIRS include
+# LIBRARIES video_reprojection
+ CATKIN_DEPENDS cv_bridge sensor_msgs std_msgs roscpp # rospy
+# DEPENDS system_lib
 )
 
 ###########
@@ -118,7 +122,8 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 # include
-#  ${catkin_INCLUDE_DIRS}
+ ${catkin_INCLUDE_DIRS}
+ ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -134,7 +139,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/video_reprojection_node.cpp)
+add_executable(${PROJECT_NAME}_node src/video_reprojection_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,9 +152,10 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+)
 
 #############
 ## Install ##
