--- a/code/catkin_ws/src/video_reprojection/package.xml
+++ b/code/catkin_ws/src/video_reprojection/package.xml
@@ -49,15 +49,30 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>sensor_msgs</build_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  
+  <build_depend>image_transport</build_depend>
+  <exec_depend>image_transport</exec_depend>
+  <build_export_depend>image_transport</build_export_depend>
+  
+  <build_depend>OpenCV</build_depend>
+  <exec_depend>OpenCV</exec_depend>
+  <build_export_depend>OpenCV</build_export_depend>
+  
   <build_depend>std_msgs</build_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+
   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
+
+  <build_depend>cv_bridge</build_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
+  <exec_depend>cv_bridge</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
