c++ reprojection node start to be promising

--- a/code/catkin_ws/src/jacob_bringup/CMakeLists.txt
+++ b/code/catkin_ws/src/jacob_bringup/CMakeLists.txt
@@ -179,6 +179,9 @@ install(FILES
 #   # myfile1
 #   # myfile2
   launch/jacob_bringup.launch
+  launch/tbot_cam.launch
+  launch/tbot_vision_test.launch
+  launch/tbot_vision_line_following.launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
