large renaming campain

--- a/code/catkin_ws/src/camera_reprojection/CMakeLists.txt
+++ b/code/catkin_ws/src/camera_reprojection/CMakeLists.txt
@@ -1,13 +1,23 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(jacob_bringup)
+project(camera_reprojection)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
+set(OpenCV_DIR /usr/share/OpenCV/)
+#set(OpenCV_DIR $ENV{ROS_PACKAGE_PATH}/OpenCV-3.3.1-dev/)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+  image_transport
+  roscpp
+  cv_bridge
+  OpenCV
+  #vision_opencv
+  sensor_msgs
+  std_msgs
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -66,7 +76,7 @@ find_package(catkin REQUIRED)
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   sensor_msgs#   std_msgs
 # )
 
 ################################################
@@ -99,10 +109,10 @@ find_package(catkin REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES jacob_bringup
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
+# INCLUDE_DIRS include
+# LIBRARIES camera_reprojection
+ CATKIN_DEPENDS cv_bridge sensor_msgs std_msgs roscpp # rospy
+# DEPENDS system_lib
 )
 
 ###########
@@ -113,12 +123,13 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 # include
-# ${catkin_INCLUDE_DIRS}
+ ${catkin_INCLUDE_DIRS}
+ ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/jacob_bringup.cpp
+#   src/${PROJECT_NAME}/camera_reprojection.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -129,7 +140,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/jacob_bringup_node.cpp)
+add_executable(camera_reprojection_node src/camera_reprojection_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -142,9 +153,10 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(${PROJECT_NAME}_node
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+)
 
 #############
 ## Install ##
@@ -155,10 +167,10 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(PROGRAMS
+  src/camera_reprojection.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
@@ -175,22 +187,18 @@ include_directories(
 # )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-install(FILES
+# install(FILES
 #   # myfile1
 #   # myfile2
-  launch/jacob_bringup.launch
-  launch/tbot_cam.launch
-  launch/tbot_vision_test.launch
-  launch/tbot_line_following.launch
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
 
 #############
 ## Testing ##
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_jacob_bringup.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_camera_reprojection.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
