--- a/code/catkin_ws/src/camera_reprojection/package.xml
+++ b/code/catkin_ws/src/camera_reprojection/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>jacob_bringup</name>
+  <name>camera_reprojection</name>
   <version>0.0.0</version>
-  <description>The jacob_bringup package</description>
+  <description>The camera_reprojection package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/jacob_bringup</url> -->
+  <!-- <url type="website">http://wiki.ros.org/camera_reprojection</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,6 +49,30 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>sensor_msgs</build_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  
+  <build_depend>image_transport</build_depend>
+  <exec_depend>image_transport</exec_depend>
+  <build_export_depend>image_transport</build_export_depend>
+  
+  <build_depend>OpenCV</build_depend>
+  <exec_depend>OpenCV</exec_depend>
+  <build_export_depend>OpenCV</build_export_depend>
+  
+  <build_depend>std_msgs</build_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+
+  <build_depend>roscpp</build_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <exec_depend>roscpp</exec_depend>
+
+  <build_depend>cv_bridge</build_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
+  <exec_depend>cv_bridge</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
